--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required (VERSION 3.14)
 
-project("ral")
+project("ral" 
+        VERSION 0.1
+        DESCRIPTION "Roger Allen's Lisp"
+        LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
