start with version 0.1

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,8 @@
+configure_file (
+    "${PROJECT_SOURCE_DIR}/src/version.h.in"
+    "${PROJECT_SOURCE_DIR}/src/version.h"
+)
+
 add_executable(ral 
     "ral.cpp"
     "malCore.cpp" "malEnv.cpp" "malTypes.cpp"
