--- a/src/version.h.in
+++ b/src/version.h.in
@@ -5,3 +5,5 @@
 #define RAL_VERSION_PATCH @PROJECT_VERSION_PATCH@
 #define RAL_VERSION_TWEAK @PROJECT_VERSION_TWEAK@
 #define RAL_VERSION "@PROJECT_VERSION@"
+
+#define RAL_BUILD_TYPE "@CMAKE_BUILD_TYPE@"
