rename files--start mal->ral

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,5 @@ configure_file (
 )
 
 add_executable(ral 
-    "ral.cpp"
-    "malCore.cpp" "malEnv.cpp" "malTypes.cpp"
-    "printer.cpp" "reader.cpp")
+    "ral.cpp" "core.cpp" "env.cpp" "printer.cpp" 
+    "reader.cpp" "types.cpp")
