add double math
add basic descriptions to most files

--- a/src/version.h.in
+++ b/src/version.h.in
@@ -1,5 +1,7 @@
 #pragma once
 
+// WARNING: DO NOT EDIT version.h
+
 #define RAL_VERSION_MAJOR @PROJECT_VERSION_MAJOR@
 #define RAL_VERSION_MINOR @PROJECT_VERSION_MINOR@
 #define RAL_VERSION_PATCH @PROJECT_VERSION_PATCH@
